
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feast-online-feature-ops"
version = "0.1.0"
description = "Build an online feature operations surface with freshness tracking, store visibility, and training-serving consistency checks."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
